--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "firebase": "^5.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-lazy-load": "^3.0.13",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-virtualized": "^9.21.0",
+    "react-virtualized-image-measurer": "^0.4.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
