--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rick-and-morty",
+  "name": "app-unsplash",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "dev": "NODE_PATH=src/ react-scripts start",
-    "deploy": "yarn build && firebase deploy",
+    "deploy": "npm run build && firebase deploy",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
