--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "styled-components": "^4.1.3"
   },
   "scripts": {
-    "dev": "NODE_PATH=src/ react-scripts start",
+    "dev": "react-scripts start",
     "deploy": "npm run build && firebase deploy",
     "build": "react-scripts build",
     "test": "react-scripts test",
